--- a/_config.yml
+++ b/_config.yml
@@ -15,13 +15,13 @@ defaults:
 
 # --- 网站信息设置 ---
 # 下面填写你的博客标题
-title: selous个人简介
+title: 
 # 下面填写你的网络常用名
-name: selous
+name: Agonie
 # 下面填写你的座右铭或者是个性签名
-description: 编程之久除了算法和数据结构，什么也不属于我们.
-# 你博客的 url 地址，比如：https://selous123.github.io 或者是自定义的域名
-url: https://selous123.github.io
+description: 一只咸鱼，偶尔想要翻身
+# 你博客的 url 地址，比如：https://agonie.github.io 或者是自定义的域名
+url: https://agonie.github.io
 # 在页尾的版权时间信息，比如：2016-2018，默认是 2018 年
 copyright_time: 2020
 # 标签页的 logo 及博客的头像，如果你想引用网络图片资源，就取消下面的注解，并填写图片资源的 url 地址
@@ -41,9 +41,9 @@ show_excerpt: true
 # 取消下面的注解，并填写相应的你要开启的社交链接
 #twitter: https://twitter.com/showzeng
 # weibo: https://weibo.com/varen5201314
-github: https://github.com/selous123
+github: https://github.com/Agonie
 # 邮件地址前面带上 mailto:
-email: lrhselous@163.com
+email: hongnan.zhang@foxmail.com
 # RSS 订阅
 rss: true
 # --- 社交链接 ---
@@ -55,7 +55,7 @@ rss: true
 # cnzz (友盟统计)
 #cnzz_id: 1274425891
 # Baidu (百度统计)
-baidu_id: 1b3b1dd10417c649478b6e267a85591f
+#baidu_id: 1b3b1dd10417c649478b6e267a85591f
 # Google Analytics (谷歌统计)
 # google_id:
 # --- 站点统计 ---
@@ -76,19 +76,19 @@ baidu_id: 1b3b1dd10417c649478b6e267a85591f
 # 同时图片的文件名必须为 alipay 和 wechat
 reward: true
 # 打赏的推广语
-reward_description: 如果你觉得本文对你有帮助，不妨请我喝杯咖啡
+reward_description: 如果你觉得本文对你有帮助，不妨请我吃个鸡腿
 # --- 打赏设置 ---
 
 
 # --- 评论设置 ---
 # 开启评论，取消下面一行注解，并填写相应评论运营商提供的 id，目前仅支持来必力和 gitment
-comment: true
+#comment: true
 # 来必力 uid
 # livere_uid:
 # gitment 用户主，即 GitHub 用户名
-gitment_owner: selous123
+gitment_owner: Agonie
 # GitHub pages 仓库名，如：showzeng.github.io
-gitment_repo: selous123.github.io
+gitment_repo: agonie.github.io
 # gitment 提供的对应 id 和 secret
 gitment_client_id: 76bb22ffd69cb9a2dc11
 gitment_secret: 1bc48766be80fbcb2802679ab796d76ac4fafe44
